--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 
 
 
-<span id="Chorianopoulos_2018">Chorianopoulos, K., 2018. A taxonomy of video lecture styles. The International Review of Research in Open and Distributed Learning 19.</span>
+<span id="Chorianopoulos_2018">Chorianopoulos, K., 2018. <a href="https://doi.org/http://dx.doi.org/10.19173/irrodl.v19i1.2920">A Taxonomy of Asynchronous Instructional Video Styles</a>. The International Review of Research in Open and Distributed Learning 19.</span>
 
 
   <a href="http://pdf.epidro.me/Chorianopoulos_2018.pdf">PDF</a>
