--- a/papers/index.html
+++ b/papers/index.html
@@ -349,7 +349,7 @@
 
 
 
-<span id="Merkouris_2017a">Merkouris, A., Chorianopoulos, K., 2017. Programming Human-Robot Interactions in Middle School : The Role of Mobile Input Modalities in Embodied Learning. In: International Conference on Interactive Mobile Communication, Technologies and Learning (IMCL2017). Springer, pp. 146–153.</span>
+<span id="Merkouris_2017a">Merkouris, A., Chorianopoulos, K., 2017. <a href="https://doi.org/10.1007/978-3-319-75175-7_45">Programming Human-Robot Interactions in Middle School : The Role of Mobile Input Modalities in Embodied Learning</a>. In: International Conference on Interactive Mobile Communication, Technologies and Learning (IMCL2017). Springer, pp. 146–153.</span>
 
 
   <a href="http://pdf.epidro.me/Merkouris_2017a.pdf">PDF</a>
