--- a/types/index.html
+++ b/types/index.html
@@ -164,7 +164,7 @@
 
 
 
-<span id="Garneli_2018">Garneli, V., Chorianopoulos, K., 2018. <a href="https://doi.org/10.1080/10494820.2017.1337036">Programming video games and simulations in science education: exploring computational thinking through code analysis</a>. Interactive Learning Environments 1–16.</span>
+<span id="Garneli_2018">Garneli, V., Chorianopoulos, K., 2018. <a href="https://doi.org/10.1080/10494820.2017.1337036">Programming video games and simulations in science education: exploring computational thinking through code analysis</a>. Interactive Learning Environments 26, 386–401.</span>
 
 
   <a href="http://pdf.epidro.me/Garneli_2018.pdf">PDF</a>
