--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   </head>
 
-  <body class="layout--single">
+  <body class="layout--single wide">
 
     <!--[if lt IE 9]>
 <div class="notice--danger align-center" style="margin: 0;">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience.</div>
@@ -286,9 +286,9 @@
 
       <section class="page__content" itemprop="text">
         
-        <h1 id="publications">Publications</h1>
+        <h1 id="recent-publications">Recent publications</h1>
 
-<ol class="bibliography"><li><span id="Chorianopoulos_2018">Chorianopoulos, K., 2018. A Taxonomy of Asynchronous Instructional Video Styles. The International Review of Research in Open and Distributed Learning 19.</span>
+<ol class="bibliography"><li><span id="Chorianopoulos_2018"><span style="font-variant: small-caps">Chorianopoulos, K.</span> 2018. A Taxonomy of Asynchronous Instructional Video Styles. <i>The International Review of Research in Open and Distributed Learning</i> <i>19</i>, 1.</span>
 
 
   <a href="https://doi.org/10.19173/irrodl.v19i1.2920"><i class="ai ai-doi"></i></a>
@@ -298,15 +298,19 @@
   <a href="http://pdf.epidro.me/Chorianopoulos_2018.pdf"><i class="fas fa-file-pdf"></i></a>
 
 
-<!--
-<details close>
-    <summary>Abstract</summary>
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
     <span class="notice">Many educational organizations are employing instructional video
 in their pedagogy, but there is limited understanding of the possible presentation styles. In practice, the presentation style of video lectures ranges from a direct recording of classroom teaching with a stationary camera and screencasts with voice-over, up to highly elaborate video post-production. Previous work evaluated the effectiveness of several presentation styles, but there has not been any consistent taxonomy, which would have made comparisons and meta-analyses possible. In this article, we surveyed the research literature and we examined contemporary video-based courses, which have been produced by diverse educational organizations and teachers across various academic disciplines. We organized video lectures in two dimensions according to the level of human presence and according to the type of instructional media. In addition to organizing existing video lectures in a comprehensive way, the proposed taxonomy offers a design space that facilitates the choice of a suitable presentation style, as well as the preparation of new ones.</span>
 </details>
--->
 </li>
-<li><span id="Garneli_2018">Garneli, V., Chorianopoulos, K., 2018. Programming video games and simulations in science education: exploring computational thinking through code analysis. Interactive Learning Environments 26, 386–401.</span>
+<li><span id="Garneli_2018"><span style="font-variant: small-caps">Garneli, V. and Chorianopoulos, K.</span> 2018. Programming video games and simulations in science education: exploring computational thinking through code analysis. <i>Interactive Learning Environments</i> <i>26</i>, 3, 386–401.</span>
 
 
   <a href="https://doi.org/10.1080/10494820.2017.1337036"><i class="ai ai-doi"></i></a>
@@ -316,14 +320,18 @@ in their pedagogy, but there is limited understanding of the possible presentati
   <a href="http://pdf.epidro.me/Garneli_2018.pdf"><i class="fas fa-file-pdf"></i></a>
 
 
-<!--
-<details close>
-    <summary>Abstract</summary>
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
     <span class="notice">Various aspects of computational thinking (CT) could be supported by educational contexts such as simulations and video-games construction. In this field study, potential differences in student motivation and learning were empirically examined through students’ code. For this purpose, we performed a teaching intervention that took place over five weeks, with two-hour sessions per week, plus two more weeks for the pretest and post-test projects. Students were taught programming concepts through a science project; one group represented the function of a basic electric circuit by creating a simulation, while the other group represented the same function by creating a video game in which a player should achieve a score in order to win. Video game construction resulted in projects with higher CT skills and more primitives, as measured through projects’ code analysis. Moreover, the video-game context seems to better motivate students for future engagement with computing activities.</span>
 </details>
--->
 </li>
-<li><span id="Kapenekakis_2017">Kapenekakis, I., Chorianopoulos, K., 2017. Citizen science for pedestrian cartography: collection and moderation of walkable routes in cities through mobile gamification. Human-centric Computing and Information Sciences 7, 10.</span>
+<li><span id="Kapenekakis_2017"><span style="font-variant: small-caps">Kapenekakis, I. and Chorianopoulos, K.</span> 2017. Citizen science for pedestrian cartography: collection and moderation of walkable routes in cities through mobile gamification. <i>Human-centric Computing and Information Sciences</i> <i>7</i>, 1, 10.</span>
 
 
   <a href="https://doi.org/10.1186/s13673-017-0090-9"><i class="ai ai-doi"></i></a>
@@ -333,15 +341,19 @@ in their pedagogy, but there is limited understanding of the possible presentati
   <a href="http://pdf.epidro.me/Kapenekakis_2017.pdf"><i class="fas fa-file-pdf"></i></a>
 
 
-<!--
-<details close>
-    <summary>Abstract</summary>
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
     <span class="notice">Digital geographical maps can be regarded as a user interface for understanding and navigating the city. Nevertheless, contemporary digital maps over-emphasize the needs of motor vehicles. Pedestrian routes have only been considered as an add-on option in existing digital maps and the respective data collection has not been performed in the field. In this article, we present a mobile application that employs gamification as a means to engage users to collect pragmatic data about walkable routes, which are then processed with the goal of creating a new kind of pedestrian-friendly cartography. Besides the technical infrastructure for collecting and filtering the route traces, the main challenge in user-generated walkable routes is the identification of malicious data, which should be rejected, as well as the rewarding of constructive behavior through peer-review. For this purpose, the mobile application employs a point system in order to identify and discourage the submission of bad routes. A longitudinal field study of the mobile application confirmed that gamification facilitates effective data collection for producing pedestrian cartography even with few users and demonstrated that gamification infuses a shared responsibly about the quality of data collection. The visualization of the pedestrian-generated data on a map required a partially manual process, thus, further research should explore the gamification of the data visualization part, too.</span>
 </details>
--->
 </li></ol>
 
-<h1 id="all-publications"><a href="/papers/">All Publications</a></h1>
+<h1 id="all-publications"><a href="/papers/">All publications</a></h1>
 
         
       </section>
