--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
   <li><a href="#summary">Summary</a></li>
   <li><a href="#recent-work">Recent work</a></li>
   <li><a href="#short-biographical-note">Short biographical note</a></li>
-  <li><a href="#resume-cv">Resume CV</a></li>
+  <li><a href="#resume">Resume</a></li>
   <li><a href="#positions">Positions</a></li>
   <li><a href="#editorial-work">Editorial work</a></li>
   <li><a href="#program-committees">Program committees</a></li>
@@ -449,7 +449,8 @@ details {
 <h2 id="short-biographical-note">Short biographical note</h2>
 <p>Konstantinos Chorianopoulos is a <a href="http://portfolio.epidro.me">maker</a>, <a href="http://scholar.epidro.me">scholar</a>, and <a href="/#mentoring">mentor</a>. He holds a Diploma in Engineering (Electronics and Computer Engineering) an MSc in Social Science (Marketing and Communication), and a Ph.D. in Design (Interaction Design). He has also been a post-doctoral Marie Curie Fellow for five years. During his studies and research, he has been affiliated with engineering, business, and applied arts university departments and he has collaborated with more than fifty researchers from academia and industry (Imperial College London UK, Microsoft Research USA, Yahoo Labs USA, University of Sao Paulo Brazil, Norwegian University of Science and Technology Norway, Bauhaus University of Weimar Germany). He has participated in seven European Commission-funded (ESPRIT, IST, FP6, FP7, H2020) research projects in the field of human-computer interaction for information, communication, learning, and entertainment applications in TV, mobile, and ubiquitous computing. He is the main author of more than fifty peer-reviewed research articles and he has been lecturing internationally (universities, conferences, tutorials, seminars, invited lectures) on several aspects (design, engineering, science, art) of informatics. He has served on the steering committee of the European Interactive TV organization and on the editorial boards of the following journals: <a href="http://cie.acm.org/about-board/">Computers in Entertainment (ACM)</a>, <a href="http://www.journals.elsevier.com/entertainment-computing/editorial-board/">Entertainment Computing (Elsevier)</a>, <a href="http://www.jvrb.org/">Journal of Virtual Reality and Broadcasting</a>.</p>
 
-<h2 id="resume-cv"><a href="/pdf/resume.pdf">Resume CV</a></h2>
+<h2 id="resume">Resume</h2>
+<p><a href="/pdf/resume.pdf">CV</a> <i class="fas fa-file-pdf"></i></p>
 <h2 id="positions">Positions</h2>
 
 <p>Konstantinos Chorianopoulos is Assistant Professor in the <a href="http://di.ionio.gr">Department of Informatics at the Ionian University</a> (Corfu, Greece). He is also adjunct lecturer in the <a href="http://sdy.eap.gr">School of Science and Technology at the Hellenic Open University</a>.</p>
