--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.11.1 by Michael Rose
+  Minimal Mistakes Jekyll Theme 4.11.2 by Michael Rose
   Copyright 2013-2018 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE.txt
@@ -663,6 +663,8 @@ PLOS ONE, Computers and Education (Elsevier), The International Review of Resear
   <li>Skills: Most things worthwhile doing have a steep learning curve especially in the beginning, but “the more you know, the more you know”.</li>
   <li>Gadgets: Keep your gadgets updated, get to know their attributes, spend time maintaining them, but avoid “new is better”.</li>
   <li>Body: While not on board, stay fit and sharp by cycling, swimming, rowing, pilates, meditation, eating, and sleeping.</li>
+  <li>Stand up: Be explosive, but gentle.</li>
+  <li>Exit: Sooner or later you will have to make an exit from that (not so) nice wave, you better have a strategy before hand.</li>
 </ul>
 
 <p>Sometimes, I think that the above findings might also apply to other life situations besides surfing.</p>
@@ -732,7 +734,7 @@ GREECE</p>
 
     
   <script src="/assets/js/main.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.0.12/js/all.js"></script>
 
 
 
