--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.12.0 by Michael Rose
+  Minimal Mistakes Jekyll Theme 4.12.1 by Michael Rose
   Copyright 2013-2018 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE.txt
@@ -392,11 +392,8 @@
   <li>Teaching <a href="/#courses">HCI, MM, UbiComp, SE, and CSCW courses</a>.</li>
   <li><a href="/#mentoring">Mentoring</a> MSc and PhD thesis students.</li>
   <li>Design of open systems for <a href="http://www.socialskip.org/">Video Analytics</a>, <a href="http://www.flutrack.org/">Social Media Visualization</a>, <a href="http://www.mapito.org">Interactive mapmaking</a>.</li>
-  <li>Authoring and publication of an English book on interactive computing: <a href="http://www.mibook.org">Making Interactivity</a></li>
-  <li>Authoring and publication of a Greek book on interactive computing: <a href="http://www.pibook.gr">Programming Interactivity</a></li>
-  <li>Publicity co-chair of <a href="http://www.percom.org/">IEEE Pervasive Computing 2018</a>, Athens, Greece</li>
-  <li>General co-chair of the <a href="http://icec2015.idi.ntnu.no/">IFIP International Conference on Entertainment Computing 2015</a>, Trondheim, Norway</li>
-  <li>Managing project <a href="http://cult.di.ionio.gr/">CULT</a>, funded by Marie Curie (EU), Microsoft Research (USA), and GSRT (Greece).</li>
+  <li>Authoring and publication of an English book on interactive computing: <a href="http://mibook.org/en">Making Interactivity</a></li>
+  <li>Authoring and publication of a Greek book on interactive computing: <a href="http://mibook.org/gr">Programming Interactivity</a></li>
 </ul>
 
 <h2 id="short-biographical-note">Short biographical note</h2>
@@ -749,7 +746,7 @@ GREECE</p>
 
     
   <script src="/assets/js/main.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
 
 
 
