--- a/resume/index.html
+++ b/resume/index.html
@@ -326,7 +326,7 @@
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-cog"></i> Contents</h4></header>
               <ul class="toc__menu">
-  <li><a href="#βιογραφικό-στα-ελληνικά">Βιογραφικό στα Ελληνικά</a></li>
+  <li><a href="#resume-cv-in-greek">Resume CV in Greek</a></li>
   <li><a href="#summary">Summary</a></li>
   <li><a href="#recent-work">Recent work</a></li>
   <li><a href="#short-biographical-note">Short biographical note</a></li>
@@ -377,9 +377,9 @@
             </nav>
           </aside>
         
-        <h2 id="βιογραφικό-στα-ελληνικά">Βιογραφικό στα Ελληνικά</h2>
+        <h2 id="resume-cv-in-greek">Resume CV in Greek</h2>
 
-<p><a href="/gr/resume.pdf">Download Greek CV</a></p>
+<p><a href="/gr/resume.pdf">Ελληνικό βιογραφικό</a></p>
 
 <h2 id="summary">Summary</h2>
 
