--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!--
-  Minimal Mistakes Jekyll Theme 4.12.1 by Michael Rose
+  Minimal Mistakes Jekyll Theme 4.12.0 by Michael Rose
   Copyright 2013-2018 Michael Rose - mademistakes.com | @mmistakes
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE.txt
@@ -447,7 +447,7 @@
 
 <p><strong>Interaction Design (1st semester, 5 ECTS, 10 students):</strong> The Interaction Design course provides a lecture-based introduction to the breadth of human-centered computing. In addition to desktop user interfaces, the course introduces mobiles, CSCW, ubiquitous computing, entertainment, etc. The course is complemented with a reading folder and critical presentations by the students.</p>
 
-<p><strong>Computer Supported Cooperative Work (2nd semester, 5 ECTS, 10 students):</strong> This course is complementary (optional) follow-up to Interaction Design and is based on a reading folder that includes the state-of-the-art in CSCW. Moreover, students are working in groups of two in order to produce original research in CSCW and present it in a final workshop (schoolit10 workshop, schoolit11 workshop).</p>
+<p><strong>Computer Supported Cooperative Work (2nd semester, 5 ECTS, 10 students):</strong> This course is complementary (optional) follow-up to Interaction Design and is based on a reading folder that includes the state-of-the-art in CSCW. Moreover, students are working in groups of two in order to produce original research in CSCW and present it in a final workshop: <a href="https://sites.google.com/a/ionio.gr/schoolit10/">schoolit10 workshop</a>, <a href="https://sites.google.com/a/ionio.gr/schoolit11/">schoolit11 workshop</a>.</p>
 
 <p><strong>Ubiquitous computing (Distance education, 6 ECTS, 15 students):</strong> The ubiquitous computing course has two dimensions: 1) A series of five lectures provides a solid background to the human factors aspect of computer technologies beyond the desktop and the server room, and 2) A hands-on series of projects, which employ either off-the-shelf technologies (camera, leds, sensors), or re-purposed consumer devices (mobile phone, mouse, keyboard), or the arduino system.</p>
 
@@ -682,6 +682,9 @@
   <li>Skills: Most things worthwhile doing have a steep learning curve especially in the beginning, but “the more you know, the more you know”.</li>
   <li>Gadgets: Keep your gadgets updated, get to know their attributes, spend time maintaining them, but avoid “new is better”.</li>
   <li>Body: While not on board, stay fit and sharp by cycling, swimming, rowing, pilates, meditation, eating, and sleeping.</li>
+  <li>Stand up: Be explosive, but gentle.</li>
+  <li>Exit: Sooner or later you will have to make an exit from that (not so) nice wave, you better have a strategy before hand.</li>
+  <li>Landing smoothly: It is already quite hard to jump and even harder to do so with style, but the most challenging part is to land that aerial trick smoothly.</li>
 </ul>
 
 <p>Sometimes, I think that the above findings might also apply to other life situations besides surfing.</p>
@@ -751,7 +754,7 @@ GREECE</p>
 
     
   <script src="/assets/js/main.min.js"></script>
-  <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+  <script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
 
 
 
