--- a/publications/index.html
+++ b/publications/index.html
@@ -339,6 +339,7 @@
   <li><a href="#conferences">Conferences</a></li>
   <li><a href="#workshops-and-posters">Workshops and posters</a></li>
   <li><a href="#tutorials-and-keynotes">Tutorials and keynotes</a></li>
+  <li><a href="#book-chapters">Book chapters</a></li>
   <li><a href="#reports">Reports</a></li>
 </ul>
             </nav>
@@ -3708,6 +3709,189 @@ discs (e.g., blue-ray), BBC peer-to-peer service, and mobile television. Based o
 for further research. The agenda includes, for example, end-user enrichment of television content and social television. This
 half-day tutorial will provide the attendee a solid understanding of the technologies currently in use and an introduction of
 the open questions in the field.</span>
+</details>
+</li></ol>
+
+<h2 id="book-chapters">Book chapters</h2>
+
+<ol class="bibliography"><li><span id="Chorianopoulos_2013a"><span style="font-variant: small-caps">Chorianopoulos, K., Shamma, D.A., and Kennedy, L.</span> 2013. Social Video Retrieval: Research Methods in Controlling, Sharing, and Editing of Web Video. In: N. Ramzan, R. van Zwol, J.-S. Lee, K. Clüver and X.-S. Hua, eds., <i>Social Media Retrieval</i>. Springer, 3–22.</span>
+
+
+  <a href="https://doi.org/10.1007/978-1-4471-4555-4_1"><i class="ai ai-doi"></i></a>
+
+
+
+  <a href="http://pdf.epidro.me/Chorianopoulos_2013a.pdf"><i class="fas fa-file-pdf"></i></a>
+
+
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
+    <span class="notice">Content-based video retrieval has been a very efficient technique with new video content, but it has not
+regarded the increasingly dynamic interactions between users and content. We present a comprehensive survey on user-based
+techniques and instrumentation for social video retrieval researchers. Community-based approaches suggest there is much to
+learn about an unstructured video just by analyzing the dynamics of how it is being used. In particular, we explore three
+pillars of online user activity with video content: 1) Seeking patterns within a video is linked to interesting video segments,
+2) Sharing patterns between users indicate that there is a correlation between social activity and popularity of a video, and
+3) Editing of live events is automated through the synchronization of audio across multiple viewpoints of the same event.
+Moreover, we present three complementary research methods in social video retrieval: Experimental replication of user activity
+data and signal analysis, data mining and prediction on natural user activity data, and hybrid techniques that combine robust
+content-based approaches with crowd sourcing of user gener- ated content. Finally, we suggest further research directions in
+the combination of richer user- and content-modeling, because it provides an attractive solution to the personalization,
+navigation, and social consumption of videos.</span>
+</details>
+</li>
+<li><span id="Chorianopoulos_2010d"><span style="font-variant: small-caps">Chorianopoulos, K. and Rieniets, T.</span> 2010. Shared-Screen Interaction: Engaging Groups in Map-Mediated Nonverbal Communication. In: <i>Shared Encounters</i>. Springer, 81–98.</span>
+
+
+
+
+  <a href="http://pdf.epidro.me/Chorianopoulos_2010d.pdf"><i class="fas fa-file-pdf"></i></a>
+
+
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
+    <span class="notice">This chapter describes the design and development of an interactive video installation that allows
+participants to explore a map narrative, and engage in group interactions through a shared screen. For this purpose, several
+layers of cartographic information were employed in a computer application, which was programmed with motion-tracking libraries
+in the open source tool processing. The interactive video installation has been chosen as a medium to achieve the following
+aims: (1) The visualization of urban-conflict as an interactive map narrative, and (2) the encouragement of social encounters
+through a shared screen. The development process begins with the design of interaction between the system and the participants,
+as well as between the participants themselves. Then we map the interaction design concepts into multimedia and architectural
+design. Finally, we provide a discussion on the creative process and the collaboration between different disciplines, such as
+architecture, urban planning, cartography, computer engineering, and media studies.</span>
+</details>
+</li>
+<li><span id="Willis_2010"><span style="font-variant: small-caps">Willis, K.S., Roussos, G., Chorianopoulos, K., and Struppek, M.</span> 2010. Shared Encounters. In: K.S. Willis, G. Roussos, K. Chorianopoulos and M. Struppek, eds., <i>Shared Encounters</i>. Springer London, London, 1–15.</span>
+
+
+  <a href="https://doi.org/10.1007/978-1-84882-727-1"><i class="ai ai-doi"></i></a>
+
+
+
+  <a href="http://pdf.epidro.me/Willis_2010.pdf"><i class="fas fa-file-pdf"></i></a>
+
+
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
+    <span class="notice">The approach often adopted by Human Computer Interaction (HCI) focuses on exchanges between a person and the
+interface of a device situated within a specific context of use. This view is increasingly challenged by the complex and
+dynamic world of the physical and social environment integrated with ubiquitous technologies, which requires an alternative
+view that sees people creating settings which frame and structure their encounters. As a result, in recent years, HCI
+researchers have recognized the need for social and physical data to be gathered and interpreted, but have often been
+frustrated in their attempts to codify and make sense of the complex and dynamic nature of the real world of human experience.
+Developments in the early 90s such as the emergence of the field of Computer Supported Cooperative Work (CSCW), the
+introduction of the concept of social navigation (Hook et al. 2003), work on ambient environments, the UbiComp conference
+series as well as more theoretical positions on embodied or situated interaction (Dourish 2001, McCullough 2005) have all lead
+the way to a new understanding of HCI. Another driver for this change in emphasis in HCI is the emergence of mobile and
+ubiquitous computing that has brought significant changes in social and cultural practices in spatial settings. Interactions
+through and with ubiquitous technologies no longer require physical co-presence and have broadened the range of possible
+interactions as well as the range of settings in which these interactions can unfold. The basis for this lies in the fact that
+physical distance no longer prevents many of the types of interactions and encounters that had previously been confined to
+face-to-face contact. As a result, there has been much discussion on the role of spatial setting and interaction mediated
+through technologies such as that on the role of space and agency in the quality of the interaction (Dourish and Harrisson
+1996) and also the broader concept of the situated behavior and actions (Suchman 1987). A good deal has also been written on
+the subject of social collaboration among individuals using communication devices and the conditions or features that are
+required to enable such activities (Gaver 1992; Paulos and Goodman 2004; Hook et al. 2003; Churchill et al. 2004). Further
+discussion has focused on the technologies themselves, assessing the social impact of the emerging forms of behavior, such as
+the activities of ad hoc communities enabled through mobile technologies (Rheingold 2002), or the patterns of mobile phones’
+use (Katz and Aakhus 2002). Finally, numerous applications and locative media projects (e.g., Harle and Hopper 2005) which
+explore interactions through realization have been developed. These projects and research offer many useful insights, but there
+still remain many questions about how to create the conditions for meaningful and persisting shared interactions in public
+space. The challenge is not only to build systems that respond to rich and dynamic social and physical events, but also to
+provide a structure for sustainable participation and sharing.</span>
+</details>
+</li>
+<li><span id="Chorianopoulos_2010"><span style="font-variant: small-caps">Chorianopoulos, K.</span> 2010. Scenarios of Use for Sociable Mobile TV. In: A. Marcus, A.C. Roibás and R. Sala, eds., <i>Mobile TV: Customizing Content and Experience</i>. Springer London, London, 243–254.</span>
+
+
+  <a href="https://doi.org/10.1007/978-1-84882-701-1"><i class="ai ai-doi"></i></a>
+
+
+
+  <a href="http://pdf.epidro.me/Chorianopoulos_2010.pdf"><i class="fas fa-file-pdf"></i></a>
+
+
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
+    <span class="notice">Mobile TVs have been available for many years, without ever becoming very popular. Moreover, the first wave
+of research has been mostly concerned with technology and standards, which are necessary to ensure interoperability and market
+acceptance. Although, there has been a significant body of computer-supported co-operative work (CSCW) and mobile
+human–computer interaction (HCI) research findings, there is limited investigation in the context of leisure activities, such
+as TV. In this article, we propose three concepts that drive the main paths for research and practice in mobile and social TV:
+(1) Mobile TV as a content format, (2) Mobile TV as user behavior, and (3) Mobile TV as interaction terminal. Finally, we
+provide particular directions to be considered in further research in social and mobile TV.</span>
+</details>
+</li>
+<li><span id="Lekakos_2009"><span style="font-variant: small-caps">Lekakos, G. and Chorianopoulos, K.</span> 2009. Personalized Advertising Methods in Digital Interactive Television. In: M. Pagani, ed., <i>Encyclopedia of Multimedia Technology and Neworking</i>. IGI Press, 1142–1147.</span>
+
+
+  <a href="https://doi.org/10.4018/978-1-60566-014-1.ch155"><i class="ai ai-doi"></i></a>
+
+
+
+  <a href="http://pdf.epidro.me/Lekakos_2009.pdf"><i class="fas fa-file-pdf"></i></a>
+
+
+<style>
+details {
+    display: inline;
+}
+</style>
+
+<details close="">
+    <summary></summary>
+    <span class="notice">The ability to deliver personalized advertising messages has long been a major objective in marketing since
+it allows marketers to meet heterogeneous consumer needs and target their messages more effectively (Arens &amp; Bovee, 1994).
+However, traditional one-to-many marketing approaches applied in mass media suffer from their inability to meet this objective
+(Dibb, 1998; Hoffman &amp; Novak, 1997). In order to increase the efficiency of their strategy, marketers identify homogeneous
+groups of consumers (market segmentation) which they target according to their marketing objectives. Thus, market segmentation
+has become the most important marketing tool for targeting purposes (McBurnie &amp; Clutterbuck, 1998), also utilized in the TV
+advertising domain in conjunction with domain-specific features such as time zones and/or program typologies. However, this
+strategy has admittedly little to offer towards the ultimate goal of one-to-one communication, since the targeted unit is the
+segment rather than the individual consumer, and therefore individual needs cannot be satisfied. In the broadcasting television
+advertising domain, media coverage either exceeds the targeted market segment or leaves potential customers without exposure to
+the message, thus reducing its cost effectiveness (Belch &amp; Belch, 1995). At the same time, TV viewers have to deal with a
+vast amount of available advertising information. The issue of information overload, typical in information theoretic terms, is
+also experienced in the case of TV advertisements as advertising clutter, which has been identified as one of the significant
+factors associated with the negative attitude of viewers towards advertising and can have a negative impact on television
+advertisement recall or recognition (Mord &amp; Gilson, 1985). Relevant surveys reveal that 80% of the viewers feel that
+there is “too much advertising in television” (Elliott &amp; Speck, 1998), while more than 75% of consumers are not happy
+with the broadcasted advertisements (Hawkins, Best, &amp; Coney, 1998 ). Current target marketing methods are limited in their
+ability to efficiently target consumers at the individual level, particularly in mass media such as television. Thus,
+personalization of advertisements provides marketers with the opportunity to increase advertising effectiveness by targeting
+consumers who are most likely to respond positively to the advertising message. The present article investigates appropriate
+personalization methods for the domain of digital television advertisements by examining relevant methods utilized for
+personalized Web applications. In addition, it is concerned with the design of the interactive elements of a typical 30-second
+advertisement in support of the personalization process. The two objectives of this article are interrelated: the selection of
+a personalization technique affects the design of interactive advertisements since it indicates the type of interaction data
+that should be collected in order to enable personalization. The next section of this article opens up the discussion on
+personalization from a theoretical point of view and in the following section specific personalization techniques are compared.
+Next, the types of interaction data required to achieve personalization are discussed and the article concludes with further
+discussion and conclusions.</span>
 </details>
 </li></ol>
 
