--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@ in their pedagogy, but there is limited understanding of the possible presentati
 </li>
 </ol>
 
-<p><a href="/publications/">All publications</a></p>
+<p><a href="https://pdf.epidro.me">All publications</a></p>
 
 <h2 id="news">News</h2>
 
