--- a/resume/index.html
+++ b/resume/index.html
@@ -419,7 +419,7 @@
 
 <h2 id="positions">Positions</h2>
 
-<p>Konstantinos Chorianopoulos is Assistant Professor in the <a href="http://di.ionio.gr">Department of Informatics at the Ionian University</a> (Corfu, Greece). He is also adjunct lecturer in the <a href="http://sdy.eap.gr">School of Science and Technology at the Hellenic Open University</a>.</p>
+<p>Konstantinos Chorianopoulos is Professor in the <a href="http://di.ionio.gr">Department of Informatics at the Ionian University</a> (Corfu, Greece). He is also adjunct Professor in the <a href="http://sdy.eap.gr">School of Science and Technology at the Hellenic Open University</a>.</p>
 
 <h2 id="editorial-work">Editorial work</h2>
 
