--- a/resume/index.html
+++ b/resume/index.html
@@ -275,7 +275,7 @@
 -->
 
   <li>
-    <a href="http://www.epidro.me">
+    <a href="httpw://users.ionio.gr/choko">
       <i class="fas fa-home"></i> Homepage
     </a>
   </li>
@@ -283,8 +283,8 @@
 
 
   <li>
-    <a href="mailto:hi@epidro.me">
-      <meta itemprop="email" content="hi@epidro.me" />
+    <a href="mailto:choko@ionio.gr">
+      <meta itemprop="email" content="choko@ionio.gr" />
       <i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email
     </a>
   </li>
