--- a/resume/index.html
+++ b/resume/index.html
@@ -275,7 +275,7 @@
 -->
 
   <li>
-    <a href="httpw://users.ionio.gr/choko">
+    <a href="https://users.ionio.gr/choko">
       <i class="fas fa-home"></i> Homepage
     </a>
   </li>
